# agente-personal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  ESTADO_ACTUAL_COMPLETO.md  QUICKSTART.md  README.md  SETUP_POSTGRESQL.md  key.txt  main.py  pyproject.toml
.claude/: project_context.md
.github/: README_GITHUB.md
config/: agent_config.yaml
data/: test_tasks.db
docs/: COMO_AGREGAR_HERRAMIENTAS.md  ESTADO_ACTUAL.md  FEATURES_COMPLETAS.md  INTEGRACIONES.md  INTEGRACIONES_COMUNICACIONES.md  INTEGRACIONES_ESPECIFICAS.md  QUE_ES_DOCKER.md  ROADMAP.md  SINCRONIZACION.md
scripts/: deploy_railway.sh  local_listener.py  setup.sh  test_integrations.py
src/core/: agent.py
src/integrations/: __init__.py  alarm.py  calcurse.py  database.py  notifications.py  postgres_db.py  scheduler.py
src/interfaces/: cli.py  telegram.py
src/tools/: __init__.py  alarm_tool.py  base.py  calendar_tool.py  notification_tool.py  reminder_tool.py  task_tool.py
src/utils/: config.py
