[project]
name = "personal-agent"
version = "0.1.0"
description = "Agente personal inteligente para gestión de tareas, calendario y aprendizaje"
readme = "README.md"
authors = [{name = "kiki"}]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "watchdog>=4.0.0",
    "python-telegram-bot>=21.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "websockets>=13.0",
    "icalendar>=6.0.0",
    "caldav>=1.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.scripts]
agent = "main:main"
